# ha-energy-analytics

./: .gitignore  README.md  pyproject.toml
energy_analytics/: README_module.md  __init__.py  assignments.py  calibrate.py  cli.py  config.py  decompose.py  disaggregate.py  fingerprint.py  learn.py  loader.py  matcher.py  profiles.py  report.py
