[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-energy-analytics"
version = "0.1.0"
description = "Per-device energy disaggregation from Home Assistant P1 + InfluxDB data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Only needed for the --plot PNG output; the dashboard does not need it.
plot = ["matplotlib>=3.7"]

[project.scripts]
energy-analysis = "energy_analytics.cli:main"

[tool.setuptools]
packages = ["energy_analytics"]
